<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TV_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HeaderName"
        android:textColor="@color/teal_700"
        android:textAlignment="center"
        android:textSize="25sp"
        />


    <EditText
        android:id="@+id/ET_Radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Header"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/RadiusCircle"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <TextView
        android:id="@+id/TV_CircleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/ET_Radius"
        />


    <EditText
        android:id="@+id/ET_Side_Square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_CircleArea"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/SideSquare"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <TextView
        android:id="@+id/TV_Square_Area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/ET_Side_Square"
        />

    <EditText
        android:id="@+id/ET_FirstSide_Rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Square_Area"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/FirstSideRectangle"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <EditText
        android:id="@+id/ET_SecondSide_Rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_FirstSide_Rectangle"
        android:layout_marginHorizontal="50sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/SecondSideRectangle"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <TextView
        android:id="@+id/TV_Rectangle_Area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/ET_SecondSide_Rectangle"
        />

    <EditText
        android:id="@+id/ET_TriangleSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Rectangle_Area"
        android:layout_marginHorizontal="50sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/SideTriangle"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <EditText
        android:id="@+id/ET_TriangleHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_TriangleSide"
        android:layout_marginHorizontal="50sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/HeightTriangle"
        android:inputType="number"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700" />

    <TextView
        android:id="@+id/TV_Triangle_Area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/ET_TriangleHeight"
        />

    <Button
        android:id="@+id/Btn_Calc_RectangleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Triangle_Area"
        android:layout_marginHorizontal="130sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonCalc"
        android:onClick="OnClickCalc"
        android:text="@string/Calculate"
        android:textColor="#000" />

</RelativeLayout>